--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas of mugu</title>
     <link rel="stylesheet" href="style.css">
     <script src="./colorpicker.js">
     </script>
-
 </head>
 
 <body>
