--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li style="background-color: yellow" id="yellow"></li>
         <br>
         <li style="background-color: green;" id="green"></li>
-        <li style="background-color: black;" id="hex" class="picker"><label class="labelForP">picker</label></li>
+        <li style="background-color: black;" id="hex" class="picker"><p class="labelForP">picker</p></li>
     </ul>
 
     <div id="shift">
@@ -28,7 +28,7 @@
                 <use xlink:href="#icon-huabi"></use>
             </svg><br>
         </div>
-        
+
         <div title="👴橡皮擦">
             <svg id='eraser' class="" aria-hidden="true">
                 <use xlink:href="#icon-xiangpica"> </use>
@@ -47,7 +47,7 @@
             </svg><br>
         </div>
     </div>
-    <footer>BLACKBOARD2.3</footer>
+    <footer>BLACKBOARD2.3.5</footer>
 </body>
 <script src=" ./main.js"> </script>
 
