add css style and ahjust

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li style="background-color: yellow" id="yellow"></li>
         <br>
         <li style="background-color: green;" id="green"></li>
-        <li style="background-color: black;" id="hex" class="picker"><p class="labelForP">picker</p></li>
+        <li style="background-color: black;" id="hex" class="picker"><p id="labelForP">picker</p></li>
     </ul>
 
     <div id="shift">
@@ -47,7 +47,7 @@
             </svg><br>
         </div>
     </div>
-    <footer>BLACKBOARD2.3.5</footer>
+    <footer>BLACKBOARD2.3.6</footer>
 </body>
 <script src=" ./main.js"> </script>
 
