fixed bug: eraser

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    
     <div id="site-loading">
         <img class='loading' src="https://i.loli.net/2020/02/27/IZsi4CKWM8ngeSo.gif" />
     </div>
@@ -42,7 +43,7 @@
         </div>
 
         <div title="👴要保存">
-            <svg id='saveimg' class="" aria-hidden="true">
+            <svg id='saveImg' class="" aria-hidden="true">
                 <use xlink:href="#icon-save"></use>
             </svg><br>
         </div>
